--- a/html-css/module-03/css/style.css
+++ b/html-css/module-03/css/style.css
@@ -45,7 +45,6 @@ html {
     width: 420px;
     display: inline-block;
     float: left;
-    margin-top: 0;
     margin-bottom: 130px;
     height: 522px;
     overflow: hidden;
@@ -77,7 +76,7 @@ html {
 }
 
 .button-wrapper {
-    margin: 0 auto 130px;
+    margin: 0 0 130px;
     display: inline-block;
     width: 100%;
     text-align: center;
