--- a/html-css/module-03/css/style.css
+++ b/html-css/module-03/css/style.css
@@ -84,6 +84,7 @@ html {
 
 .load-more {
     font-size: 20px;
+    font-family: 'Playfair Display', serif;
     border: 1px;
     width: 164px;
     height: 60px;
