--- a/html-css/module-03/css/style.css
+++ b/html-css/module-03/css/style.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Playfair+Display|Ubuntu');
-@import url('normalize.css');
+@import url('reset.css');
+
+* {
+    margin: 0;
+    padding: 0;
+}
 
 html {
     color: #626262;
