--- a/html-css/module-03/css/style.css
+++ b/html-css/module-03/css/style.css
@@ -7,24 +7,38 @@ html {
     font-size: 14px;
 }
 
+body {
+    margin: 0;
+}
+
 .wrapper {
-    width: 1200px;
+    width: 900px;
     height: auto;
     margin: 0 auto;
 }
 
 .header-wrapper {
-    margin: 75px 100px 100px;
+    margin: 0 100px;
+    padding-top: 50px;
+    padding-bottom: 100px;
 }
-.header-wrapper ul {
+.top-menu {
+    margin: 0;
     padding: 0;
     text-align: center;
+    font-size: 0;
 }
 .header-wrapper ul li {
     display: inline-block;
     list-style-type: none;
     line-height: 24px;
-    padding: 0 50px;
+    padding: 0;
+    margin-right: 100px;
+    font-size: 14px;
+}
+
+.header-wrapper ul li:last-child {
+    margin-right: 0;
 }
 
 .header-wrapper ul li a {
@@ -37,7 +51,7 @@ html {
 }
 
 .main-wrapper {
-    margin: 0 150px 150px;
+    margin: 0 0 150px;
 }
 
 .article-wrapper {
@@ -45,8 +59,7 @@ html {
     display: inline-block;
     float: left;
     margin-bottom: 130px;
-    height: 532px;
-    overflow: hidden;
+    height: auto;
 }
 
 .article-wrapper:nth-child(odd) {
@@ -57,34 +70,38 @@ html {
     margin-bottom: 60px;
 }
 
+.article-wrapper img {
+    margin: 0;
+    margin-bottom: 30px;
+}
+
 .category {
     text-transform: uppercase;
     font-family: 'Ubuntu', sans-serif;
     color: #b4ad9e;
     font-weight: 200;
-    margin: 30px auto 30px 0;
+    margin: 0;
+    margin-bottom: 30px;
 }
 
 .article-wrapper h2 {
     font-size: 30px;
+    margin: 0;
     margin-bottom: 40px;
 }
 
 .article-wrapper p {
     line-height: 24px;
-}
-
-.button-wrapper {
-    margin: 0 0 130px;
-    display: inline-block;
-    width: 100%;
-    text-align: center;
+    margin: 0;
+    overflow: hidden;
+    height: 96px;
 }
 
 .load-more {
     font-size: 20px;
+    display: block;
+    margin: 0 auto;
     font-family: 'Playfair Display', serif;
-    border: 1px;
     width: 164px;
     height: 60px;
     border: 1px solid #626262;
