--- a/html-css/module-04/css/style.css
+++ b/html-css/module-04/css/style.css
@@ -1,9 +1,12 @@
-@import url('https://fonts.googleapis.com/css?family=Playfair+Display|Ubuntu');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto');
 @import url('reset.css');
 
+/* font-family: 'Roboto', sans-serif;
+font-family: 'Open Sans', sans-serif; */
+
 html {
-    color: #626262;
-    font-family: 'Playfair Display', serif;
+    color: #0f0101;
+    font-family: 'Open Sans', sans-serif;
     font-size: 14px;
 }
 
@@ -12,28 +15,56 @@ body {
 }
 
 .wrapper {
-    width: 900px;
+    width: 1110px;
     height: auto;
     margin: 0 auto;
 }
 
-.header-wrapper {
-    margin: 0 100px;
-    padding-top: 50px;
-    padding-bottom: 100px;
+.clearfix {    
 }
+
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+.header-wrapper {
+    margin: 0;
+    padding-top: 36px;
+    padding-bottom: 105px;
+}
+
+
+.logo a {
+    font-family: 'Roboto', sans-serif;
+    display: inline-block;
+    font-size: 30px;
+    line-height: 32px;
+    float: left;
+    text-decoration: none;
+    color: #0f0101;
+}
+
+.logo a::first-letter {
+    font-family: 'Roboto Black', 'Roboto', sans-serif;
+    font-weight: 1000;
+    color: #1abc9c;
+}
+
 .top-menu {
     margin: 0;
     padding: 0;
-    text-align: center;
+    float: right;
     font-size: 0;
 }
+
 .header-wrapper ul li {
     display: inline-block;
     list-style-type: none;
-    line-height: 24px;
+    line-height: 32px;
     padding: 0;
-    margin-right: 100px;
+    margin-right: 35px;
     font-size: 14px;
 }
 
@@ -44,47 +75,138 @@ body {
 .header-wrapper ul li a {
     text-decoration: none;
     text-transform: uppercase;
+    color: #0f0101;
+    font-weight: bold;
+    letter-spacing: -1px;
 }
 
 .header-wrapper ul li a:hover {
-    color: #03a9f4;
+    color: #1abc9c;
 }
 
 .main-wrapper {
     margin: 0 0 150px;
 }
 
-.article-wrapper {
-    width: 420px;
+.featured {
+    display: block;
+    width: 100%;
+}
+
+h2.section-title {
+    font-family: 'Roboto Black', 'Roboto', sans-serif;
+    font-weight: 1000;
+    text-align: center;
+    font-size: 48px;
+    margin: 0 auto 130px;
+    float: none;
+}
+
+h2.section-title:after {
+    content: "";
+    display: block;
+    max-width: 165px;
+    border-bottom: 7px solid #1abc9c;
+    margin: 30px auto 0;
+}
+
+/* FEATURED PRODUCTS SECTION */
+
+.item-wrapper {
     display: inline-block;
     float: left;
-    margin-bottom: 130px;
+    margin: 0;
+    margin-right: 30px;
+    margin-bottom: 30px;
     height: auto;
+    width: 255px;
+    height: 322px;
+    background-color: #e9f0fd;
+    overflow: hidden;
+    position: relative;
 }
 
-.article-wrapper:nth-child(odd) {
-    margin-right: 60px;
+.item-wrapper:nth-child(4n+1) {
+    margin-right: 0;
 }
 
-.article-wrapper:nth-last-child(-n+3) {
-    margin-bottom: 60px;
+.item-wrapper:last-child {
+    margin-bottom: 105px;
 }
 
-.article-wrapper img {
+.item-wrapper:last-child::after {
+    display: inline-block;
+    width: 100%;
+    content: "";
+    clear: both;
+    text-align: center;
+}
+
+.img-wrapper {
+    display: block;
+    text-align: center;
+    height: 282px;
+}
+
+.img-wrapper:before {
+    content: '';
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
+    margin-right: -1px; /* Adjusts for spacing */
+}
+
+.img-wrapper img {
     margin: 0;
-    margin-bottom: 30px;
+    max-width: 232px;
+    max-height: 242px;
+    display: inline-block;
+    text-align: center;
+    vertical-align: middle;
 }
 
-.category {
+.item-name {
+    background: #323232;
+    font-family: 'Roboto Black', 'Roboto', sans-serif;
+    font-size: 18px;
     text-transform: uppercase;
-    font-family: 'Ubuntu', sans-serif;
-    color: #b4ad9e;
-    font-weight: 200;
+    padding: 0;
+    padding-left: 14px;
+    padding-top: 13px;
     margin: 0;
-    margin-bottom: 30px;
+    width: 200px;
+    height: 40px;
+    display: block;
+    position: absolute;
+    top: 282px;
+    color: #fff;
+    overflow: hidden;
 }
 
-.article-wrapper h2 {
+.item-price {
+    background: #8c8c8c;
+    font-family: 'Roboto Black', 'Roboto', sans-serif;
+    font-size: 18px;
+    padding-top: 13px;
+    margin: 0;
+    width: 55px;
+    height: 40px;
+    color: #fff;
+    display: block;
+    position: absolute;
+    top: 282px;
+    left: 200px;
+    text-align: center;
+}
+
+.item-price::before {
+    content: '$';
+}
+
+
+/* BLOG SECTION */
+
+.article-wrapper h3 {
     font-size: 30px;
     margin: 0;
     margin-bottom: 40px;
@@ -106,4 +228,3 @@ body {
     height: 60px;
     border: 1px solid #626262;
 }
-
