--- a/html-css/module-04/css/style.css
+++ b/html-css/module-04/css/style.css
@@ -20,8 +20,6 @@ body {
     font-size: 0;
 }
 
-.clearfix {}
-
 .clearfix::after {
     content: "";
     clear: both;
@@ -58,7 +56,7 @@ body {
     font-size: 0;
 }
 
-.header-wrapper ul li {
+.top-menu li {
     display: inline-block;
     list-style-type: none;
     line-height: 32px;
@@ -67,11 +65,11 @@ body {
     font-size: 14px;
 }
 
-.header-wrapper ul li:last-child {
+.top-mennu li:last-child {
     margin-right: 0;
 }
 
-.header-wrapper ul li a {
+.top-menu a {
     text-decoration: none;
     text-transform: uppercase;
     color: #0f0101;
@@ -79,7 +77,7 @@ body {
     letter-spacing: -1px;
 }
 
-.header-wrapper ul li a:hover {
+.top-menu li a:hover {
     color: #1abc9c;
 }
 
@@ -213,6 +211,10 @@ h2.section-title:hover:after {
 
 
 /* BLOG SECTION */
+
+.blog-wrapper {
+    margin-bottom: 150px;
+}
 
 h2.section-title:nth-child(2) {
     margin-bottom: 90px;
