--- a/html-css/module-04/css/style.css
+++ b/html-css/module-04/css/style.css
@@ -201,13 +201,14 @@ h2.section-title:hover:after {
     content: '$';
 }
 
-.img-wrapper:hover+.item-name+.item-price {
+.item-wrapper:hover > .item-price {
     background-color: #7fd9c7;
 }
 
-.img-wrapper:hover+.item-name {
+.item-wrapper:hover > .item-name {
     background-color: #1abc9c;
 }
+
 
 
 /* BLOG SECTION */
