--- a/html-css/module-05/css/style.css
+++ b/html-css/module-05/css/style.css
@@ -92,7 +92,7 @@ body {
 /* SLIDER */
 
 .slider {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("./../img/slide4.png");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("./img/slide4.png");
     width: 100%;
     height: 600px;
     margin: 0;
